# ivi-homescreen-plugins

./: .clang-format  .gitignore  README.md  formatclang.sh
camera/: camera_context.cc
docs/source/: camera.md  (+21 more)
file_selector/: messages.cc
isolate/: isolate.h
plugins/: CMakeLists.txt  config_plugins.h.in
plugins/filament_view/: CMakeLists.txt  filament_scene.cc  filament_scene.h  filament_view_plugin.cc  filament_view_plugin.h  filament_view_plugin_c_api.cc  filament_view_plugin_c_api.h  messages.g.cc  messages.g.h
plugins/filament_view/core/components/: basetransform.cc  basetransform.h  collidable.cc  collidable.h  commonrenderable.cc  commonrenderable.h  component.h
plugins/filament_view/core/components/base/: component.h
plugins/filament_view/core/components/derived/: basetransform.cc  basetransform.h  collidable.cc  collidable.h  commonrenderable.cc  commonrenderable.h  material_definitions.cc  material_definitions.h
plugins/filament_view/core/entity/: entityobject.cc  entityobject.h
plugins/filament_view/core/entity/base/: entityobject.cc  entityobject.h
plugins/filament_view/core/entity/derived/model/: model.cc  model.h
plugins/filament_view/core/entity/derived/model/animation/: animation.cc  animation.h  animation_manager.cc  animation_manager.h
plugins/filament_view/core/entity/derived/shapes/: baseshape.cc  baseshape.h  cube.cc  cube.h  plane.cc  plane.h  sphere.cc  sphere.h
plugins/filament_view/core/entity/model/: model.cc  model.h
plugins/filament_view/core/entity/model/animation/: animation.cc  animation.h  animation_manager.h
plugins/filament_view/core/entity/model/loader/: model_loader.cc  model_loader.h
plugins/filament_view/core/entity/model/state/: model_state.h  shape_state.h
plugins/filament_view/core/entity/shapes/: baseshape.cc  baseshape.h  cube.cc  cube.h  plane.cc  plane.h  sphere.cc  sphere.h
plugins/filament_view/core/include/: additionalmath.h  color.h  file_utils.h  literals.h  resource.h  settings.h  shapetypes.h
plugins/filament_view/core/model/: model.cc  model.h
plugins/filament_view/core/model/animation/: animation_manager.cc  animation_manager.h
plugins/filament_view/core/model/loader/: model_loader.cc  model_loader.h
plugins/filament_view/core/model/state/: scene_state.h
plugins/filament_view/core/scene/: ground.cc  ground_manager.cc  ground_manager.h  scene.cc  scene.h  scene_controller.cc  scene_controller.h  view_target.cc  view_target.h
plugins/filament_view/core/scene/camera/: camera.cc  camera.h  camera_manager.cc  camera_manager.h  exposure.cc  exposure.h  lens_projection.cc  lens_projection.h  projection.cc  projection.h  touch_pair.h
plugins/filament_view/core/scene/entity/: entityobject.cc  entityobject.h
plugins/filament_view/core/scene/geometry/: collision_manager.cc  collision_manager.h  direction.cc  direction.h  position.h  ray.cc  ray.h  size.cc  size.h
plugins/filament_view/core/scene/indirect_light/: indirect_light.cc  indirect_light.h  indirect_light_manager.cc  indirect_light_manager.h
plugins/filament_view/core/scene/light/: light.cc  light.h  light_manager.cc  light_manager.h
plugins/filament_view/core/scene/material/: material_definitions.cc  material_definitions.h  material_manager.cc  material_manager.h  material_parameter.cc  material_parameter.h
plugins/filament_view/core/scene/material/loader/: material_loader.cc  material_loader.h  texture_loader.cc  texture_loader.h
plugins/filament_view/core/scene/material/model/: material.cc  material.h  material_parameter.cc  material_parameter.h
plugins/filament_view/core/scene/material/texture/: texture.cc  texture.h  texture_definitions.cc  texture_definitions.h  texture_sampler.cc  texture_sampler.h
plugins/filament_view/core/scene/material/texture/enums/: mag_filter.h  min_filter.h  wrap_mode.h
plugins/filament_view/core/scene/material/utils/: material_instance.cc  material_instance.h
plugins/filament_view/core/scene/serialization/: scene_text_deserializer.cc  scene_text_deserializer.h
plugins/filament_view/core/scene/skybox/: skybox.cc  skybox.h  skybox_manager.cc  skybox_manager.h
plugins/filament_view/core/shapes/: baseshape.cc  baseshape.h  cube.cc  cube.h  plane.cc  plane.h  shape.cc  shape.h  shape_manager.cc  shape_manager.h  sphere.cc  sphere.h
plugins/filament_view/core/shapes/common/model/: vertex.h
plugins/filament_view/core/systems/: collision_manager.cc  collision_manager.h  debug_lines_manager.cc  debug_lines_manager.h  ecsystems_manager.cc  ecsystems_manager.h  model_manager.cc  model_manager.h  shape_manager.cc
plugins/filament_view/core/systems/base/: ecsystem.cc  ecsystem.h
plugins/filament_view/core/systems/derived/: collision_system.cc  collision_system.h  debug_lines_system.cc  debug_lines_system.h  filament_system.cc  filament_system.h  indirect_light_system.cc  indirect_light_system.h  light_system.cc  light_system.h  material_system.cc  material_system.h  model_manager.cc  model_system.cc  model_system.h  shape_manager.h  shape_system.cc  shape_system.h  skybox_system.cc  skybox_system.h  view_target_system.cc  view_target_system.h
plugins/filament_view/core/systems/messages/: ecs_message.h  ecs_message_types.h
plugins/filament_view/core/utils/: deserialize.cc  deserialize.h  entitytransforms.cc  entitytransforms.h  hdr_loader.cc  hdr_loader.h  ibl_profiler.h  uuidGenerator.h
plugins/filament_view/include/filament_view/: filament_view_plugin_c_api.h
plugins/filament_view/test/: mvp.cc
plugins/filament_view/viewer/: custom_model_viewer.cc  custom_model_viewer.h  settings.h
plugins/flatpak/: CMakeLists.txt  README.md  flatpak_plugin.cc  flatpak_plugin.h  flatpak_plugin_c_api.cc  inipp.h  messages.cc  messages.h
plugins/flatpak/include/flatpak/: flatpak_plugin_c_api.h
plugins/rive_text/: CMakeLists.txt  librive_text.cc  librive_text.h  rive_text_plugin.cc  rive_text_plugin.h  rive_text_plugin_c_api.cc
plugins/rive_text/include/rive_text/: rive_text_plugin_c_api.h
plugins/webview_flutter_view/subprocess/src/: CMakeLists.txt  flutter_webview_subprocess.cc
(+88 files in other folders)
